--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines": {
+    "node": "20.17.0"
+  },
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +14,7 @@
     "framer-motion": "^12.7.3",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.0.0",
     "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
